# polaris-core

./: README.md  pyproject.toml
deploy/: polaris_ddl.sql
docs/: agadg.md  ai_demo.py  baidu_wenku.py  impala_chema_execute.py  impala_session_clean.py  kw_dw_quality_inspect.py  python_udf_demo.py  string_length_udf.py  开发任务列表.md
docs/ai/: .env
docs/bak/: polaris_core-1.1.13-py3-none-any.whl
docs/tmp/: ai_demo2.py  ai_demo3.py  ai_demo4.py  deepseek_demo.py  fake_demo.py  hive_demo.py  impala_demo.py  impala_sql_alerm.py  markdown_to_imgs.py  ollama_demo.py  pyspark_demo.py  pyspark_demo2.py  region_demo.py  shell_demo.py  word.txt
src/logger/: __init__.py  logger.py
src/polaris_ai/: __init__.py
src/polaris_ai/core/: __init__.py  dify_chatflow_api.py  dify_client.py  ollama_client.py
src/polaris_ai/model/: __init__.py
src/polaris_api/: __init__.py  nacos_client.py
src/polaris_api/core/: __init__.py  metrics_collector.py  nacos_client.py  nacos_config_manager.py  security_manager.py
src/polaris_api/feign/: __init__.py
src/polaris_cache/: redis_cache.py
src/polaris_common/: __init__.py  async_http_client.py  common_constant.py  common_utils.py  currency_utils.py  date_time_utils.py  datetime_utils.py  email_client.py  gaode_client.py  gitlab_utils.py  holiday_utils.py  http_client.py  idcard_utils.py  jpy_utils.py  json_utils.py  lunix_client.py  polaris_string_utils.py  regex_utils.py  string_convert.py  time_handler.py  yaml_handler.py
src/polaris_common_core/: laplace.py  main.py
src/polaris_connector/chromadb/: chromadb_client.py
src/polaris_connector/doris/: doris_client.py
src/polaris_connector/hdfs/: hdfs_client.py
src/polaris_connector/hive/: hive_client.py
src/polaris_connector/impala/: impala_client.py
src/polaris_connector/influxdb/: influxdb_client.py
src/polaris_connector/minio/: minio_client.py
src/polaris_connector/mysql/: __init__.py  mysql_client.py
src/polaris_connector/oracle/: __init__.py  oracle_client.py  oracle_demo.py
src/polaris_connector/redis/: redis_client.py
src/polaris_core/: __init__.py  laplace.py
src/polaris_crawler/: __init__.py  crawler_utils.py
src/polaris_crypto/: aes_cipher.py
src/polaris_data_structure/: LinkedList.py
src/polaris_ds/: __init__.py
src/polaris_ds/dag/: __init__.py  base_dag.py  polaris_base_dag.py  polaris_edge.py  polaris_node.py  weight_dag.py
src/polaris_ds/likendlist/: LinkedList.py  ListNode.py  __init__.py
src/polaris_ds/matrix‌/: custom_matrix.py
src/polaris_ds/queue/: __init__.py  base_queue.py  bounded_queue.py
src/polaris_ds/stack/: __init__.py  base_stack.py
src/polaris_ds/tree/: __init__.py  binary_tree.py  node.py
src/polaris_dw/: __init__.py  dim_bom_dataset.py  dim_currency_dataset.py  dim_customer_dataset.py  dim_date_dataset.py  dim_device_dataset.py  dim_express_dataset.py  dim_hivemetastore_dataset.py  dim_ledger_account_dataset.py  dim_product_dataset.py  dim_region_dataset.py  dw_common_constant.py
src/polaris_enums/: FileTypeEnum.py  __init__.py  http_method_enums.py
src/polaris_except/: __init__.py  message_error.py  mq_error.py
src/polaris_faker/: __init__.py  generate_ecommerce_data.py  generate_ecommerce_dataset.py  gis_dataset.py  inventory_dataset.py  person_dataset.py  product_dataset.py
src/polaris_faker/dataset/: __init__.py  dim_date_dataset.py
src/polaris_function/: __init__.py  data_function.py  datatime_function.py  general_function.py  string_function.py
src/polaris_kw/: __init__.py  kw_mardown_msg.py
src/polaris_logger/: logger.py
src/polaris_message/: __init__.py  massage_push_bot.py
src/polaris_mq/: __init__.py
src/polaris_mqtt/: __init__.py  mqtt_publisher.py  mqtt_subscriber.py
src/polaris_pyspark/: __init__.py  cli.py
test/polaris_common/: my_program.py
test/polaris_connector/: polaris_mysql_unitest.py
test/polaris_crypto/: polaris_crypto_unitest.py
test/polaris_data_structure/: polaris_data_structure_unitest.py
test/polaris_ds/: polaris_ds_unitest.py
test/polaris_faker/: polaris_faker_unitest.py
test/polaris_mq/: kafka_consumer_test.py  kafka_consumer_test2.py  kafka_producer_test.py  kafka_producer_test2.py  polaris_kafka_unitest.py
test/polaris_pyspark/: polaris_pyspark_unitest.py
tests/: main.py  polaris_logger_unit_test.py
tests/polaris_common/: my_program.py  polaris_common_unit_test.py  polaris_common_unitest.py
tests/polaris_logger/: polaris_logger_unit_test.py  polaris_logger_unitest.py
tests/polaris_message/: polaris_message_unit_test.py
(+23 files in other folders)
