[project]
name = "polaris-core"
version = "1.1.7"
description = "北极星python项目开发通用核心工具包"

authors = [
    {name = "tony",email = "luojie_dataops@126.com"}
]

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "cython (>=3.1.4,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "faker (>=37.11.0,<38.0.0)",
    "impyla (>=0.22.0,<0.23.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "viztracer (>=1.0.4,<2.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "kafka-python-ng (>=2.2.3,<3.0.0)",
]

[tool.poetry]
packages = [
#    {include = "polaris_core", from = "src"},
##    {include = "polaris_ai", from = "src"},
##    {include = "polaris_api", from = "src"},
#    {include = "polaris_commom", from = "src"},
#    {include = "polaris_connector", from = "src"},
#    {include = "polaris_crypto", from = "src"},
#    {include = "polaris_enums", from = "src"},
#    {include = "polaris_exception", from = "src"},
    {include = "polaris_logger", from = "src"},
    {include = "polaris_data_structure", from = "src"},
    {include = "polaris_message", from = "src"},
    {include = "polaris_mq", from = "src"},
#    {include = "polaris_pyspark", from = "src"},
#    {include = "polaris_pyflink", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

