[project]
name = "polaris-core"
version = "1.1.13"
description = "北极星python项目开发通用核心工具包"

authors = [
    {name = "tony",email = "luojie_dataops@126.com"}
]

readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "cython (>=3.1.4,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "faker (>=14.2.1,<38.0.0)",
    "impyla (>=0.22.0,<0.23.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "viztracer (>=1.0.4,<2.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "kafka-python-ng (>=2.2.3,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "dbutils (>=3.1.2,<4.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pyspark (>=4.0.1,<5.0.0)",
    "openai (>=2.6.0,<3.0.0)",
    "yagmail (>=0.15.293,<0.16.0)",
    "oracledb (>=3.4.0,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
]

[tool.poetry]
packages = [
    {include = "polaris_kw", from = "src"},
    {include = "polaris_schedule", from = "src"},
#    {include = "polaris_core", from = "src"},
##    {include = "polaris_ai", from = "src"},
##    {include = "polaris_api", from = "src"},
    {include = "polaris_common", from = "src"},
    {include = "polaris_connector", from = "src"},
    {include = "polaris_mqtt", from = "src"},
#    {include = "polaris_crypto", from = "src"},
    {include = "polaris_enums", from = "src"},
#    {include = "polaris_exception", from = "src"},
    {include = "polaris_logger", from = "src"},
    {include = "polaris_data_structure", from = "src"},
    {include = "polaris_message", from = "src"},
    {include = "polaris_mq", from = "src"},
#    {include = "polaris_pyspark", from = "src"},
#    {include = "polaris_pyflink", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[repositories]
pypi = "https://pypi.tuna.tsinghua.edu.cn/simple"